--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "libros-coleccion",
-  "version": "0.0.0",
+  "name": "biblio-track",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "vite",
